--- a/fem-managesite/index.html
+++ b/fem-managesite/index.html
@@ -97,13 +97,13 @@
         <button class="button">Get Started</button>
       </section>
       
-      <section class="cta | bg-accent-400 text-neutral-100 padding-block-700">
+      <section class="cta | bg-accent-400 text-neutral-100 padding-block-900">
         <div class="container">
-          <div class="even-columns">
+          <div class="even-columns vertical-align-center">
             <div>
-              <p class="fs-secondary-heading fw-bold">Simplify how your team works today</p>
+              <p class="fs-primary-heading fw-bold">Simplify how your team works today.</p>
             </div>
-            <div>
+            <div class="justify-self-end-md">
               <button class="button" data-type="inverted">Get Started</button>
             </div>
           </div>
@@ -141,7 +141,7 @@
             <form action="">
               <input type="emailtext">
               <button class="button">Go</button>
-              <p>Copyright 2020. All Rights Reserverd</p>
+              <p>Copyright 2023. All Rights Reserverd</p>
             </form>
           </div>
         </div>
