--- a/fem-managesite/index.html
+++ b/fem-managesite/index.html
@@ -40,7 +40,7 @@
     </header>
     
     <main>
-      <section class="padding-block-900">
+      <section class=" hero | text-center-sm-only padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div class="flow">
@@ -48,14 +48,14 @@
               <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
               <button class="button">Get Started</button>
             </div>
-            <div>
-              <img src="images/illustration-intro.svg" alt="Bars, graphs and percentages of Manage">
+            <div class="hero-image">
+              <img class="mx-auto" src="images/illustration-intro.svg" alt="Bars, graphs and percentages of Manage">
             </div>
           </div>
         </div>
       </section>
 
-      <section class="padding-block-900">
+      <section class=" sales-points | padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div class="flow text-center-sm-only margin-bottom-700" style="--flow-spacer: 1rem;">
