--- a/fem-managesite/index.html
+++ b/fem-managesite/index.html
@@ -197,12 +197,12 @@
               </ul>
             </nav>
           </div>
-          <div class="primary-footer-form">
-            <form action="">
+          <!-- <div class="primary-footer-form"> -->
+            <form class="primary-footer-form" action="">
               <input type="email">
               <button class="button" data-glow=[none]>Go</button>
             </form>
-            <p>Copyright 2023. All Rights Reserverd</p>
+            <p class="primary-footer-copyright">Copyright 2023. All Rights Reserverd</p>
           </div>
         </div>
       </div>
