Revert Changes Vercel Test

--- a/fem-managesite/index.html
+++ b/fem-managesite/index.html
@@ -30,7 +30,7 @@
               <li><a href="#">Pricing</a></li>
               <li><a href="#">Products</a></li>
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Carers</a></li>
+              <li><a href="#">Careers</a></li>
               <li><a href="#">Community</a></li>
             </ul>
           </nav>
